\ldots durch \dotsX ersetzen
Amsmath definiert spezielle Befehle für Auslassungspunkte, welche die
Schreibweise vereinheitlichen sollen. In Aufzählungen sind dies \dotsc,
zwischen binären Operatoren \dotsb und Multiplikationspunkte sind \dotsm.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1856 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -154,7 +154,7 @@ folgende Eigenschaften:
 \begin{eigenschaften}
  \item $\emptyset\in\Algeb$.
  \item Aus $A\in\Algeb$ folgt $A^c\in \Algeb$.
- \item $A_1,A_2,\ldots\in \Algeb$ impliziert $\bigcup_{j=1}^\infty A_j\in\Algeb$.
+ \item $A_1,A_2,\dotsc\in \Algeb$ impliziert $\bigcup_{j=1}^\infty A_j\in\Algeb$.
 \end{eigenschaften}
 Ist $\Omega$ höchstens abzählbar unendlich, so kann man als $\sigma$-Algebra stets die
 Potenzmenge $\PotM(\Omega)$ von $\Omega$ nehmen.
@@ -179,7 +179,7 @@ Experimente werden durch geeignete Wahrscheinlichkeitsräume  beschrieben.
 \begin{eigenschaften}
  \item
 Jedes Wahrscheinlichkeitsmaß ist auch \highl{endlich additiv}, d.\,h.~sind
-$A_1,\ldots,A_n$ aus $\Algeb$ disjunkt, so folgt
+$A_1,\dotsc,A_n$ aus $\Algeb$ disjunkt, so folgt
  \begin{gather*}
    \WKM\Big(\bigcup_{j=1}^n A_j\Big)=\sum_{j=1}^n\WKM(A_j)\;.
  \end{gather*}
@@ -191,14 +191,14 @@ Für $A,B\in\Algeb$ mit $A\subseteq B$ folgt $\WKM(B\setminus A)=\WKM(B)-\WKM(A)
 $\WKM(A^c)=\WKM(\Omega\setminus A)=1-\WKM(A)$ für $A\in\Algeb$.
  \item
 Wahrscheinlichkeitsmaße sind \highl[stetig!von oben]{stetig von oben}, d.\,h.~gilt für $A_j\in\Algeb$
-die Aussage $A_1\supseteq A_2\supseteq\cdots$,
+die Aussage $A_1\supseteq A_2\supseteq\dotsb$,
 so folgt
  \begin{gather*}
    \WKM\Big(\bigcap_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
  \end{gather*}
  \item
 Wahrscheinlichkeitsmaße sind auch \highl[stetig!von unten]{stetig von unten}, d.\,h.~gilt für $A_j\in\Algeb$
-die Aussage $A_1\subseteq A_2\subseteq\cdots$,
+die Aussage $A_1\subseteq A_2\subseteq\dotsb$,
 so folgt
   \begin{gather*}
     \WKM\Big(\bigcup_{j=1}^\infty A_j\Big)=\lim_{j\to\infty}\WKM(A_j)\;.
@@ -207,12 +207,12 @@ so folgt
 \subsection{Typen von Wahrscheinlichkeitsmaßen}
 \subsubsection{Wahrscheinlichkeitsmaße auf höchstens abzählbar unendlichen Grundräumen}
 Bei einem Experiment seien höchstens abzählbar unendlich viele Versuchsergebnisse
-möglich. Dann kann man entweder $\Omega=\{\omega_1,\ldots,\omega_N\}$ oder
-aber $\Omega=\{\omega_1,\omega_2,\ldots\}$ wählen. Als $\sigma$-Algebra nimmt man in diesen
+möglich. Dann kann man entweder $\Omega=\{\omega_1,\dotsc,\omega_N\}$ oder
+aber $\Omega=\{\omega_1,\omega_2,\dotsc\}$ wählen. Als $\sigma$-Algebra nimmt man in diesen
 Fällen stets die Potenzmenge $\PotM(\Omega)$. Setzt man
 \begin{gather}
 \label{zu}
-p_i :=\WKM(\{\omega_i\})\,,\quad 1\le i\le N\quad\mbox{bzw.}\quad i=1,2,\ldots,
+p_i :=\WKM(\{\omega_i\})\,,\quad 1\le i\le N\quad\mbox{bzw.}\quad i=1,2,\dotsc,
 \end{gather}
 dann erhält man Zahlen mit den Eigenschaften
 \begin{eigenschaften}
@@ -239,7 +239,7 @@ Die Zuordnung erfolgt über (\ref{zu}) bzw.~(\ref{diskret}).
 Sei nunmehr $\Omega$ ein beliebiger Grundraum (nicht notwendig endlich
 oder abzählbar unendlich). Ein Wahrscheinlichkeitsmaß $\WKM$ auf $(\Omega,\PotM(\Omega))$
 heißt \highl{diskret}, wenn es eine höchstens abzählbar unendliche Teilmenge $D\subseteq \Omega$
-mit $\WKM(D)=1$ gibt. Mit $D=\{\omega_1,\omega_2,\ldots\}$ gilt dann für $A\subseteq \Omega$ wie zuvor
+mit $\WKM(D)=1$ gibt. Mit $D=\{\omega_1,\omega_2,\dotsc\}$ gilt dann für $A\subseteq \Omega$ wie zuvor
 \begin{gather*}
   \WKM(A):= \sum_{\{i\colon \omega_i\in A\}} p_i\;,
 \end{gather*}
@@ -286,20 +286,20 @@ Vorgänge).
 
 
 \subsubsection{Gleichverteilung auf $N$ Punkten}
-Gegeben seien $N$ Punkte $\omega_1,\ldots,\omega_N\in\Omega$.
+Gegeben seien $N$ Punkte $\omega_1,\dotsc,\omega_N\in\Omega$.
 Das Maß $\WKM$ auf $\PotM(\Omega)$ mit
 \begin{gather*}
   \WKM:=\frac{1}{N}\sum_{i=1}^N \delta_{\omega_i}
 \end{gather*}
-heißt \highl{Gleichverteilung} auf $\{\omega_1,\ldots,\omega_N\}$. Für ein Ereignis $A$ gilt dann
+heißt \highl{Gleichverteilung} auf $\{\omega_1,\dotsc,\omega_N\}$. Für ein Ereignis $A$ gilt dann
 \begin{gather*}
   \WKM(A)=\frac{\card\{ i\le N \colon \omega_i\in A\}}{N}=
      \frac{\mbox{Anzahl der günstigen Fälle für A}}{\mbox{Anzahl der möglichen Fälle}}\;.
 \end{gather*}
 \subsubsection{Binomialverteilung}
-Sei $\Omega=\{0,\ldots,n\}$ und sei $p\in[0,1]$ vorgegeben. Dann wird durch
+Sei $\Omega=\{0,\dotsc,n\}$ und sei $p\in[0,1]$ vorgegeben. Dann wird durch
 \begin{gather*}
-  B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\ldots,n\;,
+  B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\dotsc,n\;,
 \end{gather*}
 ein Wahrscheinlichkeitsmaß $B_{n,p}$ auf $\PotM(\Omega)$ definiert. Man nennt $B_{n,p}$
 \highl{Binomialverteilung} mit den Parametern $n$ und $p$. Die Zahl
@@ -311,13 +311,13 @@ Gegeben seien Zahlen $M,N,n\in\N_0$ mit $M,n\le N$. Dann wird durch
 \begin{gather*}
   H_{N, M ,n}(\{m\}) :=\frac{{M\choose m}{N-M\choose n-m}}{{N\choose n}}
 \end{gather*}
-ein Wahrscheinlichkeitsmaß $H_{N,M,n}$ auf $\PotM(\{0,\ldots,n\})$
+ein Wahrscheinlichkeitsmaß $H_{N,M,n}$ auf $\PotM(\{0,\dotsc,n\})$
 definiert. Man nennt $H_{N,M,n}$ \highl[Verteilung!hypergeometrische]{hypergeometrische Verteilung} mit den Parametern $N,M$ und $n$.
 Sind in einer Lieferung von $N$ Geräten $M$ Stück defekt, so beschreibt $H_{N,M,n}(\{m\})$
 die Wahrscheinlichkeit, dass man in einer zufällig entnommenen Stichprobe vom Umfang $n$ genau
 $m$ defekte Geräte beobachtet.
 \subsubsection{Poissonverteilung}
-Es sei $\Omega=\N_0=\{0,1,2,\ldots\}$. Für eine Zahl $\lambda>0$ definiert
+Es sei $\Omega=\N_0=\{0,1,2,\dotsc\}$. Für eine Zahl $\lambda>0$ definiert
 man die \highl{Poissonverteilung} mit Parameter $\lambda$ durch
 \begin{gather*}
   P_\lambda(\{k\}):= \frac{\lambda^k}{k !}\,\ez^{-\lambda}\quad\mbox{für}\quad k\in\N_0\;.
@@ -498,7 +498,7 @@ von $\Algeb$ nach $[0,1]$ ist ein Wahrscheinlichkeitsmaß mit den zusätzlichen 
 \subsubsection{Formel über die totale Wahrscheinlichkeit}
 \begin{thm}
 \label{total}
-Gegeben seien disjunkte Mengen $B_1,\ldots,B_n$ in $\Algeb$ mit
+Gegeben seien disjunkte Mengen $B_1,\dotsc,B_n$ in $\Algeb$ mit
 $\WKM(B_j)>0$. Dann gilt für $A\in \Algeb$ mit $A\subseteq\bigcup_{j=1}^n B_j$
 die Aussage
   \begin{gather*}
@@ -511,13 +511,13 @@ für alle $A\in\Algeb$.
 Zur Berechnung von a posteriori Wahrscheinlichkeiten ist die Formel von
 Bayes wichtig. Sie besagt das folgende:
 \begin{thm}
-Unter den Voraussetzungen aus Satz~\ref{total} an $B_1,\ldots,B_n$ und $A$ folgt
+Unter den Voraussetzungen aus Satz~\ref{total} an $B_1,\dotsc,B_n$ und $A$ folgt
 für
 $\WKM(A)>0$ die Identität
 \begin{gather}
 \label{Bayes}
 \WKM(B_k|A)=\frac{\WKM(B_k)\cdot\WKM(A|B_k)}{\sum_{j=1}^n
-\WKM(B_j)\cdot\WKM(A|B_j)}\quad\mbox{für}\;\;k=1,\ldots,n\;.
+\WKM(B_j)\cdot\WKM(A|B_j)}\quad\mbox{für}\;\;k=1,\dotsc,n\;.
 \end{gather}
 \end{thm}
 \textit{Bemerkung:} Den Nenner in Formel (\ref{Bayes}) kann man (falls bekannt) durch $\WKM(A)$
@@ -534,31 +534,31 @@ gilt.
 Die $\emptyset$ und $\Omega$ sind von jeder Menge $A\in\Algeb$ unahängig. Sind
 $A$ und $B$ unahängig, dann gilt dies auch für die Paare $A$ und $B^c$ bzw.~$A^c$ und $B^c$.
 \subsubsection{Unabhängigkeit von $n$ Ereignissen}
-Die Ereignisse $A_1,\ldots,A_n$ aus $\Algeb$ heißen (stochastisch) \highl{unabhängig},
-wenn für alle Teilmengen $I\subseteq\{1,\ldots,n\}$ stets
+Die Ereignisse $A_1,\dotsc,A_n$ aus $\Algeb$ heißen (stochastisch) \highl{unabhängig},
+wenn für alle Teilmengen $I\subseteq\{1,\dotsc,n\}$ stets
 \begin{gather}
 \label{unab1}
 \WKM\Bigl(\bigcap_{i\in I} A_i\Bigr)= \prod_{i\in I}\WKM(A_i)
 \end{gather}
 gilt. Man kann dies auch wie folgt formulieren: Für alle $m\ge 2$ und alle
-$1\le i_1<\cdots<i_m\le n$ hat man
+$1\le i_1<\dotsb<i_m\le n$ hat man
 \begin{gather}
 \label{unab2}
-\WKM(A_{i_1}\cap\cdots\cap A_{i_m})= \WKM(A_{i_1})\cdots\WKM(A_{i_m})\;.
+\WKM(A_{i_1}\cap\dotsb\cap A_{i_m})= \WKM(A_{i_1})\dotsm\WKM(A_{i_m})\;.
 \end{gather}
-Die Ereignisse $A_1,\ldots,A_n$ aus $\Algeb$ heißen \highl[unabhängig!paarweise]{paarweise unabhängig}, wenn
-jeweils zwei Ereignisse aus $A_1,\ldots,A_n$ unabhängig sind, d.\,h.~die Gleichungen
+Die Ereignisse $A_1,\dotsc,A_n$ aus $\Algeb$ heißen \highl[unabhängig!paarweise]{paarweise unabhängig}, wenn
+jeweils zwei Ereignisse aus $A_1,\dotsc,A_n$ unabhängig sind, d.\,h.~die Gleichungen
 (\ref{unab1}) bzw.~(\ref{unab2}) müssen nur für $\card(I)=2$ bzw.~für $m=2$ erfüllt sein.
 \subsubsection{Eigenschaften}
-Unabhängige Mengen $A_1,\ldots,A_n$ sind auch paarweise unabhängig. Die Umkehrung ist
+Unabhängige Mengen $A_1,\dotsc,A_n$ sind auch paarweise unabhängig. Die Umkehrung ist
 i.a.~falsch. Ebenso falsch ist, dass aus
 \begin{gather*}
-  \WKM(A_{1}\cap\cdots\cap A_{n})= \WKM(A_{1})\cdots\WKM(A_{n})
+  \WKM(A_{1}\cap\dotsb\cap A_{n})= \WKM(A_{1})\dotsm\WKM(A_{n})
 \end{gather*}
 stets die Unabhängigkeit der $A_j$ folgt.
 
-Sind $A_1,\ldots A_n$ unabhängig, so gilt dies auch für $(A_j)_{j\in J}$  mit
-$J\subseteq \{1,\ldots,n\}$.
+Sind $A_1,\dotsc, A_n$ unabhängig, so gilt dies auch für $(A_j)_{j\in J}$  mit
+$J\subseteq \{1,\dotsc,n\}$.
 
 \section{Zufallsvariable}
 \subsection{Definition und Verteilungsgesetz}
@@ -596,7 +596,7 @@ Wahrscheinlichkeitsmaß ist. Damit hat $\WKM_X$ die Gestalt
   \WKM_X(B)=\sum_{\{i\colon x_i\in  B\}} p_i
 \end{gather*}
 mit geeigneten $x_i\in\R$ und $p_i\ge 0$. Die $x_i$ sind die möglichen Werte von $X$, d.\,h.~es
-gilt\\ $\WKM(X\in\{x_1,x_2,\ldots\})=1$,
+gilt\\ $\WKM(X\in\{x_1,x_2,\dotsc\})=1$,
 und
 \begin{gather*}
   p_i=\WKM\{\omega\in\Omega \colon X(\omega)=x_i\}\;.
@@ -664,7 +664,7 @@ Sei $\Omega$ eine Menge mit einer $\sigma$-Algebra $\Algeb$. Eine Abbildung $\ve
 heißt ($n$-dimensionaler) \highl[zufällige!Vektor@\nobreak-r Vektor]{zufälliger Vektor}, wenn seine Koordinatenabbildungen
 $X_j \colon\Omega\mapsto \R$ alle zufällige Größen sind. Dabei sind wie üblich die $X_j$ durch
 \begin{gather*}
-  \vec X(\omega)=(X_1(\omega),\ldots,X_n(\omega))\;,\quad \omega\in\Omega\,,
+  \vec X(\omega)=(X_1(\omega),\dotsc,X_n(\omega))\;,\quad \omega\in\Omega\,,
 \end{gather*}
 definiert.
 
@@ -673,14 +673,14 @@ Sei $(\Omega,\Algeb,\WKM)$ ein Wahrscheinlichkeitsraum. Dann definiert
 man wie im eindimensionalen Fall das Verteilungsgesetz $\WKM_{\vec X}$ von $\vec X$
 durch
 \begin{gather*}
-  \WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega \colon (X_1(\omega),\ldots,X_n(\omega))\in B\}\;.
+  \WKM_{\vec X}(B):=\WKM\big(\vec X^{-1}(B)\big)=\WKM\{\omega\in\Omega \colon (X_1(\omega),\dotsc,X_n(\omega))\in B\}\;.
 \end{gather*}
-Im Spezialfall $B=B_1\times\cdots\times B_n$ für Borelmengen $B_j\subseteq\R$ folgt
+Im Spezialfall $B=B_1\times\dotsb\times B_n$ für Borelmengen $B_j\subseteq\R$ folgt
 \begin{gather*}
-  \WKM_{\vec X}(B)=\WKM(X_1\in B_1,\ldots, X_n\in B_n)\;.
+  \WKM_{\vec X}(B)=\WKM(X_1\in B_1,\dotsc, X_n\in B_n)\;.
 \end{gather*}
 Deshalb nennt man $\WKM_{\vec X}$ auch \highl[Verteilungsgesetz!gemeinsames]{gemeinsames Verteilungsgesetz} der zufälligen
-Größen $X_1,\ldots,X_n$.
+Größen $X_1,\dotsc,X_n$.
 \subsubsection{Randverteilungen}
 Für einen zufälligen Vektor $\vec X$ nennt man die Verteilungsgesetze $\WKM_{X_j}$, $1\le j\le n$,
 die \highl[Randverteilung]{Randverteilungen} von $\vec X$. Hierbei sind wie zuvor die zufälligen Größen $X_j$ die
@@ -688,12 +688,12 @@ zugehörigen Koordinatenabbildungen.
 \begin{thm}
 Die Randverteilungen berechnen sich aus der gemeinsamen Verteilung durch
   \begin{gather*}
-    \WKM_{X_j}(B)= \WKM_{\vec X}(\R\times\cdots\times \underbrace{B}_j\times\cdots\times\R)\;,\quad B\in\BorelM(\R)\;.
+    \WKM_{X_j}(B)= \WKM_{\vec X}(\R\times\dotsb\times \underbrace{B}_j\times\dotsb\times\R)\;,\quad B\in\BorelM(\R)\;.
   \end{gather*}
 Damit bestimmt die gemeinsame Verteilung die zugehörigen Randverteilungen.
 \end{thm}
 \textit{Bemerkung:} Die Umkehrung der obigen Aussage ist i.a.~falsch, d.\,h.~es existieren zufällige
-Vektoren $\vec X=(X_1,\ldots,X_n)$ und $\vec Y=(Y_1,\ldots, Y_n)$ mit $\WKM_{X_j}=\WKM_{Y_j}$,
+Vektoren $\vec X=(X_1,\dotsc,X_n)$ und $\vec Y=(Y_1,\dotsc, Y_n)$ mit $\WKM_{X_j}=\WKM_{Y_j}$,
 $1\le j\le n$, aber mit $\WKM_{\vec X}\not=\WKM_{\vec Y}$.
 \subsubsection{Randverteilungen diskreter Vektoren}
 \label{disk}
@@ -736,25 +736,25 @@ gilt. Dann haben $X$ bzw.~$Y$ Verteilungsdichten $q$ und $r$ mit
      r(y):=\int_{-\infty}^\infty p(x,y)\diff{x}\;.
 \end{gather*}
 \subsubsection{Unabhängigkeit von zufälligen Größen}
-Gegeben seien $n$ zufällige Größen $X_1,\ldots,X_n$ auf $(\Omega,\Algeb,\WKM)$. Gilt für beliebige
-Borelmengen $B_1,\ldots,B_n\in\BorelM(\R)$ stets
+Gegeben seien $n$ zufällige Größen $X_1,\dotsc,X_n$ auf $(\Omega,\Algeb,\WKM)$. Gilt für beliebige
+Borelmengen $B_1,\dotsc,B_n\in\BorelM(\R)$ stets
 \begin{gather}
 \label{unab}
-\WKM(X_1\in B_1,\ldots,X_n\in B_n)=\WKM(X_1\in B_1)\cdots\WKM(X_n\in B_n)\;,
+\WKM(X_1\in B_1,\dotsc,X_n\in B_n)=\WKM(X_1\in B_1)\dotsm\WKM(X_n\in B_n)\;,
 \end{gather}
-so heißen $X_1,\ldots,X_n$ \highl{unabhängig}.\\
+so heißen $X_1,\dotsc,X_n$ \highl{unabhängig}.\\
 \textit{Bemerkung 1:} Die Unabhängigkeit der $X_j$ ist äquivalent zu folgender Aussage: Für
 beliebige Borelmengen $B_j\in\BorelM(\R)$ sind die Ereignisse $\left(X_j^{-1}(B_j)\right)_{j=1}^n$
 unabhängig. Das folgt aus der Tatsache, dass man in Gleichung (\ref{unab}) für gewisse vorgegebene $B_j$ auch die
 reellen Zahlen $\R$ einsetzen kann.\\
 \textit{Bemerkung 2:} Es reicht aus, wenn Gleichung (\ref{unab}) mit Intervallen $B_j$ der Form
-$(-\infty,t_j]$ für alle $t_j\in\R$ gilt. Die zufälligen Größen $X_1,\ldots,X_n$ sind also
+$(-\infty,t_j]$ für alle $t_j\in\R$ gilt. Die zufälligen Größen $X_1,\dotsc,X_n$ sind also
 dann und nur dann unabhängig, wenn für alle $t_j\in\R$ stets
 \begin{gather*}
-  \WKM(X_1\le t_1,\ldots,X_n\le t_n)=\WKM(X_1\le t_1)\cdots\WKM(X_n\le t_n)
+  \WKM(X_1\le t_1,\dotsc,X_n\le t_n)=\WKM(X_1\le t_1)\dotsm\WKM(X_n\le t_n)
 \end{gather*}
 folgt.\\
-\textit{Bemerkung 3:} Aufgrund von (\ref{unab}) ist die gemeinsame Verteilung von $X_1,\ldots,X_n$
+\textit{Bemerkung 3:} Aufgrund von (\ref{unab}) ist die gemeinsame Verteilung von $X_1,\dotsc,X_n$
 im Fall der Unabhängigkeit eindeutig durch
 ihre Randverteilungen $P_{X_j},$ $1\le j\le n$, bestimmt.
 \subsubsection{Spezialfälle}
@@ -791,7 +791,7 @@ Sei $U$ eine auf $[0,1]$ gleichverteilte zufällige Größe. Unter den
 obigen Voraussetzungen gilt dann für $Y:=F_X^{-1}(U)$ die Aussage
 $X\stackrel{d}{=} Y$.
 \end{thm}
-\textit{Anwendung:} Sind $u_1,\ldots,u_n$ unabhängig erzeugte reelle Zahlen, die gemäß der
+\textit{Anwendung:} Sind $u_1,\dotsc,u_n$ unabhängig erzeugte reelle Zahlen, die gemäß der
 Gleichverteilung aus $[0,1]$ gewählt wurden, so sind die Zahlen $x_j:= F_X^{-1}(u_j)$ ebenfalls unabhängig
 und gemäß $\WKM_X$ verteilt.
 \subsubsection{Lineare Transformationen}
@@ -871,7 +871,7 @@ $X+Y\sim \NormVert(\mu_1+\mu_2,\sigma_1^2+\sigma_2^2)$ .
 \end{thm}
 \subsection{Erwartungswert}
 \subsubsection{Erwartungswert diskreter zufälliger Größen}
-Eine zufällige Größe $X$ nehme Werte $x_1,x_2,\ldots$ aus $[0,\infty)$ an. Dann
+Eine zufällige Größe $X$ nehme Werte $x_1,x_2,\dotsc$ aus $[0,\infty)$ an. Dann
 definiert man den \highl{Erwartungswert} von $X$ durch
 \begin{gather*}
   \E X :=\sum_{i=1}^\infty x_i\,\WKM(X=x_i)\;.
@@ -907,7 +907,7 @@ und man definiert den \highl{Erwartungswert} von $X$ durch
 \begin{center}
 \begin{tabular}{|c|l|}\hline
 \bf Verteilung von $X$& \bf Erwartungswert von $X$\\ \hline\hline
-$X$ gleichverteilt auf $x_1,\ldots,x_N$& $\E X=\frac{1}{N}\sum_{i=1}^N x_i$\\ \hline
+$X$ gleichverteilt auf $x_1,\dotsc,x_N$& $\E X=\frac{1}{N}\sum_{i=1}^N x_i$\\ \hline
 $X\sim B_{n,p}$& $\E X= n p$\\ \hline
 $X\sim P_\lambda$&$\E X= \lambda$\\ \hline
 $X$ geometrisch verteilt mit Parameter $p$& $\E X = \frac{1-p}{p}$\\ \hline
@@ -928,7 +928,7 @@ gilt
     \E(a X+ b Y) = a\,\E X + b\, \E Y\;.
   \end{gather*}
 \item
-Sei  $X$ diskret mit möglichen Werten $x_1,x_2,\ldots$ aus $\R$ .
+Sei  $X$ diskret mit möglichen Werten $x_1,x_2,\dotsc$ aus $\R$ .
 Dann existiert für eine Funktion $f \colon\R\mapsto\R$
 der Erwartungswert $\E f(X)$ genau dann, wenn
   \begin{gather*}
@@ -1024,7 +1024,7 @@ Sind $X$ und $Y$ unabhängig, dann gilt
 \begin{center}
 \begin{tabular}{|c|l|}\hline
 \bf Verteilung von $X$& \bf Varianz von $X$\\ \hline\hline
-$X$ gleichverteilt auf $x_1,\ldots,x_N$& $\V X=\frac{1}{N}\sum_{i=1}^N (x_i-\E X)^2$\\ \hline
+$X$ gleichverteilt auf $x_1,\dotsc,x_N$& $\V X=\frac{1}{N}\sum_{i=1}^N (x_i-\E X)^2$\\ \hline
 $X\sim B_{n,p}$& $\V X= n\,p\,(1-p)$\\ \hline
 $X\sim P_\lambda$&$\V X= \lambda$\\ \hline
 $X$ geometrisch verteilt mit Parameter $p$& $\V X = \frac{1-p}{p^2}$\\ \hline
@@ -1046,7 +1046,7 @@ definiert.
 
 \begin{enumerate}
 \item
-Sind $X$ und $Y$ diskret mit möglichen Werten $x_1,x_2,\ldots$ bzw.~$y_1,y_2,\ldots$ aus $\R$,
+Sind $X$ und $Y$ diskret mit möglichen Werten $x_1,x_2,\dotsc$ bzw.~$y_1,y_2,\dotsc$ aus $\R$,
 so berechnet sich die Kovarianz aus der Formel
   \begin{gather*}
     \cov(X,Y)=\sum_{i,j=1}^\infty (x_i-a)(y_j-b)\, p_{ij}
