Mathemodi in Überschriften mit \texorpdfstring kapseln
In der Lesezeichenliste von PDF‐Dokumenten gibt es keinen Mathemodus.
Daher beschwert sich hyperref über die Verwendungen von $…$ in
Überschriften. Für diese Stellen muss mit \texorpdfstring eine
Alternative für die Lesezeichenliste angegeben werden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1857 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -145,7 +145,7 @@ Ein Ereignis $A\subseteq \Omega$ \highl{tritt ein}, wenn das beim Versuch oder d
 beobachtete zufällige Ergebnis in der Menge
 $A$ liegt.
 
-\subsubsection{$\sigma$-Algebra}
+\subsubsection{\texorpdfstring{$\sigma$}{sigma}-Algebra}
 Auf dem Grundraum $\Omega$ wird ein System $\Algeb\subseteq \PotM(\Omega)$  von Ereignissen
 ausgezeichnet, denen man in sinnvoller Weise die
 Wahrscheinlichkeit ihres Eintretens zuordnen kann. Aus naheliegenden Gründen fordert man,
@@ -253,7 +253,7 @@ Eine stückweise stetige Funktion $p\colon\R\mapsto\R$ heißt
  \item $\int_{-\infty}^\infty p(x)\diff{x}=1$
 \end{eigenschaften}
 gelten.
-\subsubsection{Borel-$\sigma$-Algebra}
+\subsubsection{Borel-\texorpdfstring{$\sigma$}{sigma}-Algebra}
 Mit $\BorelM(\R)$ bezeichnet man die kleinste $\sigma$-Algebra von Mengen aus $\R$, die
 die halboffenen Intervalle enthält. Man nennt $\BorelM(\R)$ die $\sigma$-Algebra der
 \highl[Borelmenge]{Borelmengen}. Elemente von $\BorelM(\R)$ sind z.\,B. alle offenen oder abgeschlossenen Mengen,
@@ -285,7 +285,7 @@ beschreibt Vorgänge, bei denen mit Wahrscheinlichkeit $1$ genau $\omega_0$ eint
 Vorgänge).
 
 
-\subsubsection{Gleichverteilung auf $N$ Punkten}
+\subsubsection{Gleichverteilung auf \texorpdfstring{$N$}{N} Punkten}
 Gegeben seien $N$ Punkte $\omega_1,\dotsc,\omega_N\in\Omega$.
 Das Maß $\WKM$ auf $\PotM(\Omega)$ mit
 \begin{gather*}
@@ -408,7 +408,7 @@ $\NormVert(0,1)$ . Wahrscheinlichkeiten des Eintretens von Intervallen berechnen
      \int_\alpha^\beta \ez^{-\nicefrac{x^2}{2}}\diff{x}\;.
 \end{gather*}
 
-\subsubsection{Gleichverteilung auf einer Menge im $\R^n$}
+\subsubsection{Gleichverteilung auf einer Menge im \texorpdfstring{$\R^n$}{Rn}}
 Es sei $E\subseteq \R^n$ eine beschränkte und abgeschlossene
 Teilmenge, deren $n$-dimensionales Volumen $\vol_n(E)$ man
 berechnen kann. Man definiert die \highl[Gleichverteilung!auf $E$]{Gleichverteilung auf $E$} durch den Ansatz
@@ -533,7 +533,7 @@ gilt.
 \subsubsection{Eigenschaften}
 Die $\emptyset$ und $\Omega$ sind von jeder Menge $A\in\Algeb$ unahängig. Sind
 $A$ und $B$ unahängig, dann gilt dies auch für die Paare $A$ und $B^c$ bzw.~$A^c$ und $B^c$.
-\subsubsection{Unabhängigkeit von $n$ Ereignissen}
+\subsubsection{Unabhängigkeit von \texorpdfstring{$n$}{n} Ereignissen}
 Die Ereignisse $A_1,\dotsc,A_n$ aus $\Algeb$ heißen (stochastisch) \highl{unabhängig},
 wenn für alle Teilmengen $I\subseteq\{1,\dotsc,n\}$ stets
 \begin{gather}
