--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -906,7 +906,7 @@ und man definiert den \highl{Erwartungswert} von $X$ durch
 {\renewcommand{\arraystretch}{1.4}
 \begin{center}
 \begin{tabular}{|c|l|}\hline
-\bf Verteilung von $X$& \bf Erwartungswert von $X$\\ \hline\hline
+\bfseries Verteilung von $X$& \bfseries Erwartungswert von $X$\\ \hline\hline
 $X$ gleichverteilt auf $x_1,\dotsc,x_N$& $\E X=\frac{1}{N}\sum_{i=1}^N x_i$\\ \hline
 $X\sim B_{n,p}$& $\E X= n p$\\ \hline
 $X\sim P_\lambda$&$\E X= \lambda$\\ \hline
@@ -1023,7 +1023,7 @@ Sind $X$ und $Y$ unabhängig, dann gilt
 {\renewcommand{\arraystretch}{1.4}
 \begin{center}
 \begin{tabular}{|c|l|}\hline
-\bf Verteilung von $X$& \bf Varianz von $X$\\ \hline\hline
+\bfseries Verteilung von $X$& \bfseries Varianz von $X$\\ \hline\hline
 $X$ gleichverteilt auf $x_1,\dotsc,x_N$& $\V X=\frac{1}{N}\sum_{i=1}^N (x_i-\E X)^2$\\ \hline
 $X\sim B_{n,p}$& $\V X= n\,p\,(1-p)$\\ \hline
 $X\sim P_\lambda$&$\V X= \lambda$\\ \hline
