Verweise mit \autoref oder \eqref machen
\autoref (aus dem Paket hyperref) hat den Vorteil, dass es automatisch
den Typ des Verweisziels voranstellt und somit auch mehr Klickfläche im
PDF‐Dokument bietet. \eqref hingegen ergänzt automatisch Klammern, sollte
also auch nur für Verweise auf Gleichungen verwendet werden, an Stellen,
wo kein Platz für das Wort Gleichung ist.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1862 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -227,14 +227,14 @@ Für eine Menge $A\subseteq \Omega$ folgt dann
 \label{diskret}
 \WKM(A):= \sum_{\{i\colon \omega_i\in A\}} p_i\;.
 \end{gather}
-Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \ref{p1} und \ref{p2} vor,
-so wird durch (\ref{diskret}) ein Wahrscheinlichkeitsmaß $\WKM$ auf $\PotM(\Omega)$ definiert. Für
+Umgekehrt, gibt man eine Folge $(p_i)_{i\ge 1}$ reeller Zahlen mit \autoref{p1} und \autoref{p2} vor,
+so wird durch \autoref{diskret} ein Wahrscheinlichkeitsmaß $\WKM$ auf $\PotM(\Omega)$ definiert. Für
 endliche oder abzählbar unendliche Grundräume $\Omega$ hat man also folgende Äquivalenz:
 \begin{gather*}
   \{\WKM\colon \WKM\;\mbox{Wahrscheinlichkeitsmaß auf}\;\PotM(\Omega)\}
-     \Longleftrightarrow\{(p_i)_{i\ge 1}\colon (p_i)_{i\ge 1}\;\mbox{erfüllen (\ref{p1}) und (\ref{p2})}\}
+     \Longleftrightarrow\{(p_i)_{i\ge 1}\colon (p_i)_{i\ge 1}\;\mbox{erfüllen \eqref{p1} und \eqref{p2}}\}
 \end{gather*}
-Die Zuordnung erfolgt über (\ref{zu}) bzw.~(\ref{diskret}).
+Die Zuordnung erfolgt über \autoref{zu} bzw.~\autoref{diskret}.
 
 \subsubsection{Diskrete Wahrscheinlichkeitsmaße}
 Sei nunmehr $\Omega$ ein beliebiger Grundraum (nicht notwendig endlich
@@ -370,7 +370,7 @@ Insbesondere ergibt sich im Fall $[\alpha,\beta]\subseteq [a,b]$ die Formel
 d.\,h.~die Wahrscheinlichkeit des Eintretens von $[\alpha,\beta]\subseteq[a,b]$
  hängt nur von seiner Länge, nicht aber von
 seiner speziellen Lage innerhalb $[a,b]$, ab.
-Das durch (\ref{gleich}) erzeugte Wahrscheinlichkeitsmaß heißt \highl{Gleichverteilung} auf dem
+Das durch \autoref{gleich} erzeugte Wahrscheinlichkeitsmaß heißt \highl{Gleichverteilung} auf dem
 Intervall $[a,b]$.
 \subsubsection{Exponentialverteilung}
 Gegeben sei eine Zahl $\lambda>0$. Man definiert die
@@ -481,7 +481,7 @@ durch
 \end{gather}
 definiert. Sie gibt die Wahrscheinlichkeit dafür an, dass $A$
 eintritt, unter der Bedingung, dass $B$ bereits eingetreten ist. Häufig verwendet man
-Formel (\ref{Bed}) auch in der Form
+\autoref{Bed} auch in der Form
 \begin{gather*}
   \WKM(A\cap B)= \WKM(B)\,\WKM(A|B)\;.
 \end{gather*}
@@ -512,7 +512,7 @@ für alle $A\in\Algeb$.
 Zur Berechnung von a posteriori Wahrscheinlichkeiten ist die Formel von
 Bayes wichtig. Sie besagt das folgende:
 \begin{thm}
-Unter den Voraussetzungen aus Satz~\ref{total} an $B_1,\dotsc,B_n$ und $A$ folgt
+Unter den Voraussetzungen aus \autoref{total} an $B_1,\dotsc,B_n$ und $A$ folgt
 für
 $\WKM(A)>0$ die Identität
 \begin{gather}
@@ -521,7 +521,7 @@ $\WKM(A)>0$ die Identität
 \WKM(B_j)\cdot\WKM(A|B_j)}\quad\mbox{für}\;\;k=1,\dotsc,n\;.
 \end{gather}
 \end{thm}
-\textit{Bemerkung:} Den Nenner in Formel (\ref{Bayes}) kann man (falls bekannt) durch $\WKM(A)$
+\textit{Bemerkung:} Den Nenner in \autoref{Bayes} kann man (falls bekannt) durch $\WKM(A)$
 ersetzen.
 \subsection{Unabhängigkeit von Ereignissen}
 \subsubsection{Unabhängigkeit von zwei Ereignissen}
@@ -548,8 +548,8 @@ $1\le i_1<\dotsb<i_m\le n$ hat man
 \WKM(A_{i_1}\cap\dotsb\cap A_{i_m})= \WKM(A_{i_1})\dotsm\WKM(A_{i_m})\;.
 \end{gather}
 Die Ereignisse $A_1,\dotsc,A_n$ aus $\Algeb$ heißen \highl[unabhängig!paarweise]{paarweise unabhängig}, wenn
-jeweils zwei Ereignisse aus $A_1,\dotsc,A_n$ unabhängig sind, d.\,h.~die Gleichungen
-(\ref{unab1}) bzw.~(\ref{unab2}) müssen nur für $\card(I)=2$ bzw.~für $m=2$ erfüllt sein.
+jeweils zwei Ereignisse aus $A_1,\dotsc,A_n$ unabhängig sind, d.\,h.~\autoref{unab1}
+muss nur für $\card(I)=2$ bzw. \autoref{unab2} nur für $m=2$ erfüllt sein.
 \subsubsection{Eigenschaften}
 Unabhängige Mengen $A_1,\dotsc,A_n$ sind auch paarweise unabhängig. Die Umkehrung ist
 i.\,a.~falsch. Ebenso falsch ist, dass aus
@@ -657,7 +657,7 @@ ihres Verteilungsgesetzes, d.\,h., es gilt
 Für zwei zufällige Größen $X$ und $Y$ gilt genau dann $X\stackrel{d}{=}Y$, wenn man
 $F_X=F_Y$ hat.
 
-Die Funktion $F_X$ besitzt die Eigenschaften aus Satz \ref{VF}.
+Die Funktion $F_X$ besitzt die Eigenschaften aus \autoref{VF}.
 
 \subsection{Zufällige Vektoren und Unabhängigkeit zufälliger Größen}
 \subsubsection{Zufällige Vektoren}
@@ -746,25 +746,25 @@ Borelmengen $B_1,\dotsc,B_n\in\BorelM(\R)$ stets
 so heißen $X_1,\dotsc,X_n$ \highl{unabhängig}.\\
 \textit{Bemerkung 1:} Die Unabhängigkeit der $X_j$ ist äquivalent zu folgender Aussage: Für
 beliebige Borelmengen $B_j\in\BorelM(\R)$ sind die Ereignisse $\left(X_j^{-1}(B_j)\right)_{j=1}^n$
-unabhängig. Das folgt aus der Tatsache, dass man in Gleichung (\ref{unab}) für gewisse vorgegebene $B_j$ auch die
+unabhängig. Das folgt aus der Tatsache, dass man in \autoref{unab} für gewisse vorgegebene $B_j$ auch die
 reellen Zahlen $\R$ einsetzen kann.\\
-\textit{Bemerkung 2:} Es reicht aus, wenn Gleichung (\ref{unab}) mit Intervallen $B_j$ der Form
+\textit{Bemerkung 2:} Es reicht aus, wenn \autoref{unab} mit Intervallen $B_j$ der Form
 $(-\infty,t_j]$ für alle $t_j\in\R$ gilt. Die zufälligen Größen $X_1,\dotsc,X_n$ sind also
 dann und nur dann unabhängig, wenn für alle $t_j\in\R$ stets
 \begin{gather*}
   \WKM(X_1\le t_1,\dotsc,X_n\le t_n)=\WKM(X_1\le t_1)\dotsm\WKM(X_n\le t_n)
 \end{gather*}
 folgt.\\
-\textit{Bemerkung 3:} Aufgrund von (\ref{unab}) ist die gemeinsame Verteilung von $X_1,\dotsc,X_n$
+\textit{Bemerkung 3:} Aufgrund von \autoref{unab} ist die gemeinsame Verteilung von $X_1,\dotsc,X_n$
 im Fall der Unabhängigkeit eindeutig durch
 ihre Randverteilungen $P_{X_j},$ $1\le j\le n$, bestimmt.
 \subsubsection{Spezialfälle}
-Besitzen $X$ und $Y$ die Eigenschaften aus \ref{disk}, so sind $X$ und $Y$ dann und nur  dann
+Besitzen $X$ und $Y$ die Eigenschaften aus \autoref{disk}, so sind $X$ und $Y$ dann und nur  dann
 unabhängig, wenn
 \begin{gather*}
   p_{ij}=q_i\cdot r_j\,,\quad 1\le i,j<\infty\;.
 \end{gather*}
-Im stetigen Fall \ref{stet} sind $X$ und $Y$ genau dann unabhängig, wenn
+Im stetigen Fall (\autoref{stet}) sind $X$ und $Y$ genau dann unabhängig, wenn
 \begin{gather*}
   p(x,y)=q(x)\cdot r(y)\,,\quad x,y\in\R\;.
 \end{gather*}
@@ -1083,7 +1083,7 @@ Für zwei zufällige Größen $X$ und $Y$ mit zweiten Momenten definiert man ihr
   \begin{gather*}
     \rho(X,Y):=\frac{\cov(X,Y)}{(\V X)^{\nicefrac{1}{2}}(\V Y)^{\nicefrac{1}{2}}}\;.
   \end{gather*}
-Aus (\ref{cov}) folgt
+Aus \autoref{cov} folgt
   \begin{gather*}
     -1\le \rho(X,Y)\le 1\;.
   \end{gather*}
