\binom statt \choose verwenden
Vom Paket amsmath wird der Befehl \binom für den Binomialkoeffizienten
bereitgestellt. Daher sollte auch dieser gegenüber \choose vorgezogen
werden.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1865 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -300,7 +300,7 @@ heißt \highl{Gleichverteilung} auf $\{\omega_1,\dotsc,\omega_N\}$. Für ein Ere
 \subsubsection{Binomialverteilung}
 Sei $\Omega=\{0,\dotsc,n\}$ und sei $p\in[0,1]$ vorgegeben. Dann wird durch
 \begin{gather*}
-  B_{n,p}(\{k\}):={n\choose k} p^k(1-p)^{n-k},\quad k=0,\dotsc,n\;,
+  B_{n,p}(\{k\}):=\binom{n}{k} p^k(1-p)^{n-k},\quad k=0,\dotsc,n\;,
 \end{gather*}
 ein Wahrscheinlichkeitsmaß $B_{n,p}$ auf $\PotM(\Omega)$ definiert. Man nennt $B_{n,p}$
 \highl{Binomialverteilung} mit den Parametern $n$ und $p$. Die Zahl
@@ -310,7 +310,7 @@ Misserfolg $1-p$.
 \subsubsection{Hypergeometrische Verteilung}
 Gegeben seien Zahlen $M,N,n\in\N_0$ mit $M,n\le N$. Dann wird durch
 \begin{gather*}
-  H_{N, M ,n}(\{m\}) :=\frac{{M\choose m}{N-M\choose n-m}}{{N\choose n}}
+  H_{N, M ,n}(\{m\}) :=\frac{\binom{M}{m}\binom{N-M}{n-m}}{\binom{N}{n}}
 \end{gather*}
 ein Wahrscheinlichkeitsmaß $H_{N,M,n}$ auf $\PotM(\{0,\dotsc,n\})$
 definiert. Man nennt $H_{N,M,n}$ \highl[Verteilung!hypergeometrische]{hypergeometrische Verteilung} mit den Parametern $N,M$ und $n$.
@@ -618,7 +618,7 @@ oder \highl{Poissonverteilt} etc., wenn $\WKM_X$ von diesem Typ ist. In allen di
 ist $X$ diskret. Zum Beispiel ist $X$ gemäß $B_{n,p}$ verteilt (man schreibt auch
 $X\sim B_{n,p}$), falls für $0\le k\le n$ stets
 \begin{gather*}
-  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\} = {n \choose k} p^k(1-p)^{n-k}
+  \WKM_X(\{k\})=\WKM\{\omega\in\Omega \colon X(\omega)=k\} = \binom{n}{k} p^k(1-p)^{n-k}
 \end{gather*}
 gilt. Analog ist $X$ gemäß $P_\lambda$ verteilt, sofern für $k\in\N_0$
 \begin{gather*}
