--- a/linde-stochastik-zusfa/definf.tex
+++ b/linde-stochastik-zusfa/definf.tex
@@ -1305,6 +1305,41 @@ und $Y$, nämlich $Y=X$ bzw.~$Y=-X$, hat man $\rho(X,X)=1$ bzw.~$\rho(X,-X)=-1$.
 
 \appendix
 \clearpage
+\addsec{Nutzungsbedingungen}
+
+{\itshape
+  Dieses Dokument wurde für die auf der Titelseite genannte Vorlesung erstellt
+  und wird jetzt im Rahmen des Projekts
+  \enquote{\href{http://uni-skripte.lug-jena.de/}{Vorlesungsskripte der
+  Fakultät für Mathematik und Informatik}} weiter betreut. Das Dokument wurde
+  nach bestem Wissen und Gewissen angefertigt. Dennoch garantiert weder der auf
+  der Titelseite genannte Dozent, die Personen, die an dem Dokument mitgewirkt
+  haben, noch die Mitglieder des Projekts für dessen Fehlerfreiheit. Für
+  etwaige Fehler und dessen Folgen wird von keiner der genannten Personen eine
+  Haftung übernommen. Es steht jeder Person frei, dieses Dokument zu lesen, zu
+  verändern oder auf anderen Medien verfügbar zu machen, solange ein Verweis
+  auf die Internetadresse des Projekts \url{http://uni-skripte.lug-jena.de/}
+  enthalten ist.
+
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
+  \SVNDate{}. Eine neue Ausgabe könnte auf der Webseite des Projekts verfügbar
+  sein.
+
+  Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
+  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder diese
+  selbst einzupflegen -- einfach eine E"~Mail an die
+  \href{mailto:uni-skripte@lug-jena.de}{Mailingliste
+  \nolinkurl{<uni-skripte@lug-jena.de>}} senden. Weitere Informationen sind
+  unter der oben genannten Internetadresse verfügbar.
+
+  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt haben,
+  vielmals danken:
+  \begin{itemize}
+   \item Prof.\,Werner Linde (2008/09)
+  \end{itemize}
+}
+
+\clearpage
 \pdfbookmark[1]{Index}{index}
 \printindex
 
