--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -60,6 +60,7 @@
 \usepackage{nicefrac}
 \usepackage{wasysym}
 \usepackage{todonotes}
+\usepackage{amsfonts}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -398,7 +399,10 @@ die Geometrie bzw. klassische Mechanik oder geometrische Maßtheorie.
   \end{proof}
 \end{lem}
 
-Übung: $\overline{A}^{c}= (A^{c})^{o}, A\subset X, (\mathring{A})^{c}=\overline{A^{c}}$
+\begin{uebung}
+  $\overline{A}^{c}= (A^{c})^{o}, A\subset X,
+  (\mathring{A})^{c}=\overline{A^{c}}$
+\end{uebung}
 
 %folg 1.10
 \begin{folg}
@@ -581,7 +585,7 @@ zur nächsten:
 \end{lem}
 
 %lem 2.3
-\begin{lem}
+\begin{lem}\label{lem:23}
   Sei $B$ ein System von Teilmengen von $X$.
   \begin{enumerate}[(1)]
    \item $\forall x\in X\,\exists B_{X}\in B$ mit $X\in B_{X}$.
@@ -772,7 +776,182 @@ Dies ist eine Verallgemeinerung des Stetigkeitsbegriffes für metrische Räume.
   \end{proof}
 \end{folg}
 
+%Vorlesung vom 2008-11-04
+\begin{bemerk}
+  Insbesondere ist dann der Begriff der metrischen Stetigkeit äquivalent zur
+  topologischen Stetigkeit. Wir betrachten also in der Folgerung eine
+  Kugelbasis.
+\end{bemerk}
 
+\begin{uebung}
+  Sei $f\colon X\rightarrow X', g\colon X'\rightarrow X''$ stetig. Dann ist
+  $g\circ f\colon X\rightarrow X''$ auch stetig.
+\end{uebung}
+
+%lem 3.3
+\begin{lem}\label{lem:33}
+  Folgende Bedingungen sind äquivalent:
+  \begin{enumerate}[(1)]
+   \item $f\colon X\rightarrow X'$ stetig
+   \item $f(\overline{A})\subseteq\overline{f(A)}$ mit $A\subseteq X$
+   \item $\overline{f^{-1}(A')}\subseteq f^{-1}(\overline{A'})$ mit
+    $A'\subseteq X'$
+   \item $f^{-1}(\mathring{A'})\subseteq(\mathring{f^{-1}(A')})$ mit
+    $A'\subseteq X'$
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(1)$\Rightarrow$(2)] Es ist $A\subseteq f^{-1}(\overline{f(A)})$
+      abgeschlossen und damit haben wir, $\overline{A}\subseteq
+      f^{-1}(\overline{f(A)})\Rightarrow f(\overline{A})\subseteq
+      \overline{f(A)}$.
+     \item[(2)$\Rightarrow$(3)] Wir setzen $A\colon=f^{-1}(A')\Rightarrow
+      f(\overline{A})\subseteq\overline{f(A)}= \overline{A'}\Rightarrow
+      \overline{f^{-1}(A')}= \overline{A}\subseteq f^{-1}(\overline{A'})$
+     \item[(3)$\Rightarrow$(1)] Wir setzen in (3): $A'\colon=\overline{A'}
+      =\colon F'\in\CT'^{c}\Rightarrow\overline{f^{-1}(F')}\subseteq
+      f^{-1}(F')$, d.\,h. $f^{-1}(F')\in \CT^{c}\Rightarrow f$ stetig
+     \item[(3)$\Leftrightarrow$(4)] $\overline{f^{-1}(A')}\subseteq
+      f^{-1}(\overline{A'})\Leftrightarrow f^{-1}(\overline{A'})^{c}\subseteq
+      \overline{f^{-1}(A')}^{c}$. Es ist aber $f^{-1}(\overline{A'})^{c}=
+      f^{-1}(\overline{A'}^{c})= f^{-1}(\mathring{A'^{c}})$ und auch
+      $\overline{f^{-1}(A')}^{c}= \mathring{f^{-1}(A')^{c}}=
+      \mathring{f^{-1}(A'^{c})}$. Zur Vereinfachung setzen wir $A'^{c}=\colon
+      B'$ und erhalten $f^{-1}(\mathring{B'})\subseteq\mathring{f^{-1}(B')}$
+      mit $B'\subseteq X'$.
+    \end{itemize}
+  \end{proof}
+\end{lem}
+
+%folg 3.4
+\begin{folg}\label{folg:34}
+  Sei $f\colon X\rightarrow X'$ stetig. Dann gilt, $f(\partial
+  A)\subseteq\partial f(A)$ für $A\subseteq X$.
+  \begin{proof}
+    Anders formuliert, lautet die Aussage: $\partial (f^{-1}(A'))\subseteq
+    f^{-1}(\partial A')$ mit $A'\subseteq X'$ und für den Rand gilt: $\partial
+    A'= \overline{A'}\cap\overline{A'^{c}}\Rightarrow f^{-1}(\partial A')=
+    f^{-1}(\overline{A'})\cap f^{-1}(\overline{A'^{c}})$. Damit folgt nun nach
+    Punkt (3) aus \autoref{lem:33} $f^{-1}(\partial A')\supseteq
+    \overline{f^{-1}(A')}\cap \overline{f^{-1}(A'^{c})}=
+    \overline{f^{-1}(A')}\cap \overline{f^{-1}(A')^{c}}= \partial f^{-1}(A')$.
+  \end{proof}
+\end{folg}
+
+\begin{bemerk}
+  Die Gleichheiten in \autoref{lem:33} und \autoref{folg:34} gelten i.\,A.
+  nicht. Man führt deshalb weitere Begriffe ein (siehe untenstehende
+  Definitionen).
+\end{bemerk}
+
+\begin{defini}
+  Die Abbildung $f\colon(X, \CT)\rightarrow(X', \CT')$ heißt \highl{offen},
+  falls $f(G)\in\CT'$ für $G\in\CT$ und $f$ heißt \highl{abgeschlossen}, falls
+  $f(F)\in\CT'^{c}$ für $F\in\CT^{c}$.
+\end{defini}
+
+\begin{uebung}
+  Die Verknüpfung von offenen (abgeschlossenen) Abbildungen sind offen
+  (abgeschlossen).
+\end{uebung}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Im Allgemeinen bilden die offenen Abbildungen aus der Klasse der
+    stetigen Abbildungen eine sehr spezielle Teilklasse. Beispielsweise hat
+    die stetige Abbildung von $[0,1]$ auf $[0,1]$ endliche Minima und Maxima.
+    Zwischen den zwei Extremalpunkten sind die Funktionen monoton.
+   \item Die Klasse der abgeschlossenen Abbildungen ist oft sehr viel
+    "`reicher"'. Wenn $X$ kompakt ist, sind alle stetigen reellen Abbildungen
+    abgeschlossen.
+  \end{enumerate}
+\end{bemerk}
+
+% lem 3.5
+\begin{lem}
+  Sei $f\colon X\rightarrow X'$ stetig und bijektiv. Dann gilt:
+  \begin{enumerate}
+   \item Da $f$ offen ist, ist auch $f^{-1}$ offen und stetig.
+   \item Da $f$ abgeschlossen ist, ist auch $f^{-1}$ abgeschlossen und stetig.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item Es ist $f^{-1}$ genau dann stetig, wenn $(f^{-1})^{-1}(G)\in\CT'$
+      für $G\in\CT$. Dies ist aber erfüllt, da $f$ offen ist.
+     \item Der Beweis ist analog zu führen. Man muss nur $G$ durch
+      $G\in\CT^{c}$ ersetzen.
+    \end{enumerate}
+  \end{proof}
+\end{lem}
+
+\begin{defini}
+  Eine bijektive, bistetige Abbildung zwischen zwei topologischen Räumen heißt
+  \highl{Homöomorphismus} und zwei topologische Räume heißen
+  \highl{homöomorph}, falls ein Homöomorphismus zwischen ihnen existiert.
+\end{defini}
+
+\begin{bsp}
+  Sei $(\R^{n}, d)$ ein metrischer Raum. Die offenen und abgeschlossenen
+  Kugeln sind homöomorph. Aber $B$ und $\mathring{B}$ sind es nicht: Sei
+  $f\colon \mathring{B}\rightarrow B$ ein Homöomorphismus. Wir betrachten
+  $x_{n}\in\mathring{B}$ mit $x_{n}\xrightarrow{n\rightarrow\infty}
+  x\in\partial B$. Da $f$ stetig ist, folgt,
+  $z_{n}\colon=\underbrace{f(x_{n})}_{\in B} \xrightarrow{n\rightarrow\infty}
+  z\in B$. Aus der Tatsache, dass $f^{-1}$ stetig ist, folgt wiederum,
+  $y\colon=f^{-1}(z)\in\mathring{B}, f^{-1}(z_{n})\rightarrow
+  f^{-1}(z)=y\Rightarrow x=y$. Die sit jedoch ein Widerspruch, denn
+  $x\in\partial B$ und $y\in B$
+\end{bsp}
+
+\paragraph{Produkttopologien mit Projektionen}
+
+Seien $(X_{1}, \CT_{1}), (X_{2}, \CT_{2})$ topologische Räume. Wir betrachten
+das System von Teilmengen $B\colon=\{G_{1}\times G_{2}\colon G_{1}\in\CT_{1},
+G_{2}\in\CT_{2}\}$ in $X_{1}\times X_{2}$. Dieses System ist
+durchschnittsabgeschlossen. Wegen \autoref{lem:23} ist es damit Basis der
+Topologie $\CT(B)$ in $X_{1}\times X_{2}$. Diese Topologie heißt
+\highl{Produkttopologie} und wird mit $\CT_{1}\times\CT_{2}\colon=\CT(B)$
+bezeichnet. Weiterhin heißt $\pi_{i}\colon X_{1}\times X_{2}\rightarrow X_{i}$
+mit $\pi(x_{1}, x_{2})=x_{i}$ für $i=1,2$ die \highl{Projektion} auf die
+$i$"~te Koordinate.
+
+%lem 3.6
+\begin{lem}
+  Die Abbildung $f\colon(Y,\CT)\rightarrow(X_{1}\times X_{2},
+  \CT_{1}\times\CT_{2})$ ist genau dann stetig, wenn $\pi\circ
+  f\colon(Y,\CT)\rightarrow (X_{i}, \CT_{i})$ für $i=1,2$ stetig ist.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Es ist $\pi_{i}$ stetig, da $\pi_{1}^{-1}(G_{1})=
+      \underbrace{G_{1}\times X_{2}}_{\in\CT_{1}\times\CT_{2}}$ und
+      $\pi_{2}^{-1}(G_{2})= \underbrace{X_{1}\times
+      G_{2}}_{\in\CT_{1}\times\CT_{2}}$. Also folgt, dass $\pi_{i}\circ f$
+      stetig ist.
+     \item["`$\Leftarrow$"'] Für $G_{1}\in\CT_{1}, G_{2}\in\CT_{2}$ genügt es
+      zu zeigen, dass $f^{-1}(G_{1}\times G_{2})\in\CT$. Es gilt:
+      $f^{-1}(G_{1}\times G_{2})= \{y\in Y\colon\pi_{1}\circ f(y)\in G_{1},
+      \pi_{2}\circ f(y)\in G_{2}\}= \{y\colon\pi_{1}\circ f(y)\in G_{1}\}\cap
+      \{y\colon\pi_{2}\circ f(y)\in G_{2}\}\in\CT$. Also ist
+      $f^{-1}(G_{1}\times G_{2})\in\CT$.
+    \end{itemize}
+  \end{proof}
+\end{lem}
+
+\begin{uebung}
+  Zeigen Sie, dass $((X_{1}\times X_{2})\times X_{3},
+  (\CT_{1}\times\CT_{2})\times\CT_{3}), (X_{1}\times(X_{2}\times X_{3}),
+  \CT_{1}\times(\CT_{2}\times\CT_{3}))$ sowie $(X_{1}\times X_{2}\times X_{3},
+  \CT_{1}\times\CT_{2}\times\CT_{3})$ homöomorph sind.
+\end{uebung}
+
+\begin{bemerk}
+  Viele Eigenschaften stetiger Funktionen metrischer Räume übertragen sich auf
+  den topologischen Fall.
+\end{bemerk}
+
+\todo[inline]{Vorlesung vom 2008-11-04}
+
+\todo[inline]{Vorlesung vom 2008-11-06}
 
 
 
