--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -570,7 +570,7 @@ zur nächsten:
 \end{bsp}
 
 %lem 2.2
-\begin{lem}
+\begin{lem}\label{lem:22}
   Es ist $B\subseteq\CT$ genau dann Basis, wenn $\forall
   G\subseteq\CT\,\forall x\in G\,U_{x}\in B$ mit $U_{x}\subseteq G$.
   \begin{proof}
@@ -641,7 +641,7 @@ zur nächsten:
     solche Paar ein $V=\colon V'$ aus und betrachten das System der $V'$. Das
     bezeichnen wir mit $\CB'$. Nach Konstruktion ist $\CB'$ abzählbaes
     Teilsystem von $\CB$. Wir wollen nun zeigen, dass $\CB'$ Basis von $\CT$
-    ist. Dazu benutzen wir das Lemma\todo{Link zum Lemma 2.2 einfügen}. Es
+    ist. Dazu benutzen wir das \autoref{lem:22}. Es
     genügt zu zeigen, dass $\forall G\in\CT\,\forall x\in G\,\exists
     V'\in\CB'\colon x\in V'\subset G$. Es ist $\CB_{0}$ eine Basis und wir
     können daher ein $U_{j}\in\CB_{0}$ mit $x\in U_{j}\subset G$ finden.
@@ -679,7 +679,7 @@ zur nächsten:
 \begin{bemerk}
   Die Rückrichtung geht im Allgemeinen nicht. Denn sei $X=[0,1),
   \CB\colon=\{[x,x')\colon0\leq x<x'<1\}$. Dann genügt $\CB$ den Bedingungen
-  des letzten Lemmas 2.3\todo{Link zu Lemma 2.3 einfügen}:
+  des letzten \autoref{lem:23}:
   \begin{enumerate}[(1)]
    \item Es gilt immer $x\in X$.
    \item Für $[x_{1}, x_{1}')\cap[x_{2},x_{2}')$ ergibt sich wieder ein
@@ -948,12 +948,6 @@ $i$"~te Koordinate.
   Viele Eigenschaften stetiger Funktionen metrischer Räume übertragen sich auf
   den topologischen Fall.
 \end{bemerk}
-
-\todo[inline]{Vorlesung vom 2008-11-04}
-
-\todo[inline]{Vorlesung vom 2008-11-06}
-
-
 
 
 \clearpage
